add contact info to website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hello there</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        h1 {text-align: center;}
+        p {text-align: center;}
+        div {text-align: center;}
+        </style>
+    <title>Closing Labels Support Panel</title>
+</head>
+<body>
+
+    <div>
+        <h1>Closing Labels for SwiftUI</h1>
+
+        <p>If you need any support please email me</p>
+        <address>
+            Written by <a href="mailto:pedro.santos.iosdev@outlook.com">Pedro Neto</a>.<br> 
+            </address>
+    </div>
+    
+</body>
+</html>
