Add basic privacy policy

--- a/index.html
+++ b/index.html
@@ -14,9 +14,16 @@
         <h1>Closing Labels for SwiftUI</h1>
 
         <p>If you need any support please email me</p>
+
         <address>
-            Written by <a href="mailto:pedro.santos.iosdev@outlook.com">Pedro Neto</a>.<br> 
-            </address>
+            <a href="mailto:pedro.santos.iosdev@outlook.com">Pedro Neto</a>.<br> 
+        </address>
+    </div>
+<br>
+<br>
+    <div>
+        <h2>Privacy Policy</h2>
+        <p>We do not collect, save or use any personal information about you.</p>
     </div>
     
 </body>
